feat: migrate more of meteor-settings.json to configurable settings
