# meteor/server/api/studio/api.ts
@@ -29,6 +29,7 @@ import {
 	DEFAULT_MINIMUM_TAKE_SPAN,
 	DEFAULT_DISPLAY_DURATION,
 	DEFAULT_SHELF_DISPLAY_OPTIONS,
+	DEFAULT_TIME_SCALE,
 } from '@sofie-automation/shared-lib/dist/core/constants'
 import { UserPermissions } from '@sofie-automation/meteor-lib/dist/userPermissions'
 import { assertConnectionHasOneOfPermissions } from '../../security/auth'
@@ -76,6 +77,8 @@ export async function insertStudioInner(newId?: StudioId): Promise<StudioId> {
 				useCountdownToFreezeFrame: true,
 				defaultShelfDisplayOptions: DEFAULT_SHELF_DISPLAY_OPTIONS,
 				defaultDisplayDuration: DEFAULT_DISPLAY_DURATION,
+				defaultTimeScale: DEFAULT_TIME_SCALE,
+				followOnAirSegmentsHistory: 0,
 			}),
 			_rundownVersionHash: '',
 			routeSetsWithOverrides: wrapDefaultObject({}),
