# packages/openapi/src/generated/openapi.yaml
@@ -2856,6 +2856,12 @@ paths:
                     defaultDisplayDuration:
                       type: number
                       description: Default duration (in milliseconds) to use to render parts when no duration is provided
+                    defaultTimeScale:
+                      type: number
+                      description: Default time scale zooming for the timelines in the UI
+                    followOnAirSegmentsHistory:
+                      type: number
+                      description: How many segments of history to show when scrolling back in time (0 = show current segment only)
                   required:
                     - frameRate
                     - mediaPreviewsUrl
@@ -3089,6 +3095,14 @@ paths:
                           defaultDisplayDuration:
                             type: number
                             description: Default duration (in milliseconds) to use to render parts when no duration is provided
+                          defaultTimeScale:
+                            type: number
+                            description: Default time scale zooming for the timelines in the UI
+                          followOnAirSegmentsHistory:
+                            type: number
+                            description: >-
+                              How many segments of history to show when scrolling back in time (0 = show current segment
+                              only)
                         required:
                           - frameRate
                           - mediaPreviewsUrl
@@ -3278,6 +3292,12 @@ paths:
                     defaultDisplayDuration:
                       type: number
                       description: Default duration (in milliseconds) to use to render parts when no duration is provided
+                    defaultTimeScale:
+                      type: number
+                      description: Default time scale zooming for the timelines in the UI
+                    followOnAirSegmentsHistory:
+                      type: number
+                      description: How many segments of history to show when scrolling back in time (0 = show current segment only)
                   required:
                     - frameRate
                     - mediaPreviewsUrl
